# baserate-arb

./: README.md  cli.py  pyproject.toml
src/: analyzer.py
src/agents/: base_rate_agent.py
src/clients/: polymarket.py
src/models/: market.py
tests/: test_analyzer.py  test_integration.py  test_security.py
